2005-05-19  Nate Nielsen  <nielsen@memberwebs.com>

    * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
    for nautilus plugin.
    
2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-widget.c: 
	* libseahorse/seahorse-widget.h:
	* src/Makefile.am:
	* src/seahorse-key-manager.c:
	* src/seahorse-key-manager.glade:
	* src/seahorse-key-manager.ui:
	* src/seahorse-keyserver-results.c:
	* src/seahorse-keyserver-results.glade:
	* src/seahorse-keyserver-results.ui: Use a GtkUIManager based 
	UI for menus and toolars.
	* libseahorse/seahorse-prefs-cache.c: Fix problem with controls
	not being set to initial state. See bug #304566
	* agent/seahorse-agent-cache.c: When gconf cache_authorize setting
	is set to false, clear the cache. Closes a small security hole.
    * agent/seahorse-agent.c:
    * libseahorse/seahorse-gpg-options.c: Cleanup handling of gpg.conf
    * agent/seahorse-agent-cache.glade: 
    * agent/seahorse-agent-status.c:
    * plugins/nautilus/seahorse-pgp-preferences.c: Add 'Cache Preferences' 
    item to the agent tray popup menu.
    
2005-05-15  Nate Nielsen  <nielsen@memberwebs.com>

	* libseahorse/seahorse-gconf.c: 
	* libseahorse/seahorse-hkp-source.c: Fix compile warnings
	* data/seahorse.schemas.in:
	* libseahorse/seahorse-keyserver-control.c:
	* libseahorse/seahorse-prefs.c:
	* libseahorse/seahorse-server-source.c:
	* libseahorse/seahorse-server-source.h:
	* src/seahorse-keyserver-search.c:
	* src/seahorse-keyserver-sync.c: Fix gconf key handling for our 
	stable release. Removed old keys. Parse all_keyservers key for
	compatibility with future releases.
	
2005-05-14  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-preferences.c: HIGify 'Visible Columns' tab.
    Patch from Jim Pharis (bug #304212)

2005-05-08  Nate Nielsen  <nielsen@memberwebs.com>

    * src/main.c: Display command line help.
    Patch by Adam Schreiber (bug #303463)