@@ -2,6 +2,8 @@
 
     * plugins/nautilus-ext/seahorse-nautilus.c: Clearer status messages
     for nautilus plugin.
+    * agent/seahorse-agent-io.c: Create agent socket inside users home
+    directory.
     
 2005-05-18  Nate Nielsen  <nielsen@memberwebs.com>
 
